--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+body{
+  background-color: #131720;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.title{
+  /* text-align: center; */
+  padding-left: 40%;
   color: white;
+  text-decoration: none;
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.welcome{
+  color: white;
+  padding-left: 20px;
+  padding-bottom: 50px;
 }
