--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,10 @@
 body{
   background-color: #131720;
   font-family: sans-serif;
+  padding: 20px;
 }
 
 .title{
-  /* text-align: center; */
   padding-left: 40%;
   color: white;
   text-decoration: none;
@@ -14,6 +14,22 @@ body{
 
 .welcome{
   color: white;
+  padding-bottom: 100px;
+}
+
+.onboard-card {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  background-color: #F5F5F5;
+  /* width: 100px; */
+  border-radius: 11px;
   padding-left: 20px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+}
+
+.employee-button{
+  display: flex;
+  padding-bottom: 10px;
 }
