--- a/frontend/src/auth/authForm.css
+++ b/frontend/src/auth/authForm.css
@@ -1,13 +1,13 @@
-form{
+.login-card {
     background-color: #F5F5F5;
-    width: 300px;
+    width: 250px;
     border-radius: 11px;
     display: flex;
     flex-direction: column;
-    padding-left: 40px;
-    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-bottom: 30px;
     align-items: flex-start;
-    margin: 0 auto
+    margin-left: 40%;
 }
 
 input {
@@ -24,4 +24,14 @@ button {
     border-radius: 10px;
     font: 13px system-ui;
     padding: 5px;
+}
+
+.email-form{
+    display: flex;
+    padding-bottom: 10px;
+}
+
+.password-form {
+    display: flex;
+    padding-bottom: 10px;
 }
